# backend-api-employee

./: .env  .gitmodules  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
service/: __main__.py
service/configs/: get_settings.py  neo4j.py
service/endpoints/: auth.py  news.py  trends.py
service/exceptions/: common.py
service/schemas/: common.py  news.py
service/services/: auth.py  news.py  trends.py
service/utils/: auth.py  formatter.py  get_trends.py  graph.py  logger.py
