[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
SQLAlchemy = "^1.4.41"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
