[tool.poetry]
name = "service"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
asyncpg = "^0.26.0"
SQLAlchemy = "^1.4.41"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
pydantic = "^1.10.2"
aiologger = "^0.7.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-dotenv = "^0.21.0"
psycopg2 = "^2.9.4"
greenlet = "^1.1.3"
pytz = "^2022.4"
neo4j = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
